script/minikube-onprem/annotazioni-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: annotazioni-app
spec:
  replicas: 2 # Scalabilità: 2 pod
  selector:
    matchLabels:
      app: annotazioni-app
  template:
    metadata:
      labels:
        app: annotazioni-app
    spec:
      containers:
        - name: annotazioni
          image: alnao/annotazioni:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: annotazioni-app
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  selector:
    app: annotazioni-app
