script/minikube-onprem/gestioneannotazioni-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestioneannotazioni-app
spec:
  replicas: 2 # Scalabilità: 2 pod
  selector:
    matchLabels:
      app: gestioneannotazioni-app
  template:
    metadata:
      labels:
        app: gestioneannotazioni-app
    spec:
      containers:
        - name: gestioneannotazioni
          image: alnao/gestioneannotazioni:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gestioneannotazioni-app
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  selector:
    app: gestioneannotazioni-app
