script/minikube-onprem/gestionepersonale-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestionepersonale-app
spec:
  replicas: 2 # Scalabilità: 2 pod
  selector:
    matchLabels:
      app: gestionepersonale-app
  template:
    metadata:
      labels:
        app: gestionepersonale-app
    spec:
      containers:
        - name: gestionepersonale
          image: alnao/gestionepersonale:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gestionepersonale-app
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  selector:
    app: gestionepersonale-app
