script/minikube-onprem/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: gestioneannotazioni
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:1.0.0
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: gestioneannotazioni
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30082
  selector:
    app: mongo-express
